<resources>
    <string name="app_name">Pro Learn</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="histories">Riwayat</string>
    <string name="change_password">Ubah Password</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="achievement">Pencapaian</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="start">Mulai</string>
    <string name="introduce">Pronouncation Learning</string>
    <string name="let_start">Ayo mulai belajar</string>
    <string name="login_to_save_your_progress">Login untuk menyimpan progres belajar</string>
    <string name="or">OR</string>
    <string name="image">gambar</string>
    <string name="edit_profile">Ubah Profile</string>
    <string name="logout">Logout</string>
    <string name="age">Umur</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="title">Judul</string>
    <string name="level">Tingkat Kesulitan</string>
    <string name="comming_soon">Segera Hadir</string>
    <string name="status">Status</string>
    <string name="something_wrong">Sepertinya Ada Kesalahan :(</string>
    <string name="list_module">Daftar Modul</string>
    <string name="login_first">Silahkan Login</string>
    <string name="register">Daftar</string>
    <string name="signin">Masuk</string>
    <string name="are_you_sure">Apakah anda yakin ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="logout_success">Logout berhasil!</string>
    <string name="module_description">Module Description</string>
    <string name="list_lesson">Daftar Materi</string>
    <string name="theory">Materi</string>
    <string name="quest_info_text">Silahkan baca teks dibawah ini, lalu tekan icon mic pada area jawaban dan ucapkan teks yang sudah kamu baca sebelumnya!</string>
    <string name="quest_info_text_image">Silahkan baca teks dibawah gambar, lalu tekan icon mic pada area jawaban dan ucapkan teks yang sudah kamu baca sebelumnya!</string>
    <string name="quiz_info_text_image">Silahkan jawab pertanyaan dibawah gambar, lalu tekan icon mic pada area jawaban dan ucapkan jawaban kamu!</string>
    <string name="quest_text">Soal Teks</string>
    <string name="answer">Jawaban</string>
    <string name="tap_to_record">Tap untuk mulai perekaman</string>
    <string name="tap_to_stop">Tap untuk menghentikan perekaman</string>
    <string name="tap_to_start_listening">Tap untuk memulai</string>
    <string name="tap_to_pause_listening">Tap untuk menghentikan sementara</string>
    <string name="tap_to_replay">Tap untuk mengulang proses perekaman, atau tap button lanjut pada pojok kanan atas untuk melanjutkan materi</string>
    <string name="level_not_enaugh">Level anda tidak cukup!</string>
    <string name="tab_text_material">Materi</string>
    <string name="tab_text_comment">Testimoni</string>
    <string name="review">User Review</string>
    <string name="date">Tanggal</string>
    <string name="complete_material_before">Selesaikan materi sebelumnya terlebih dahulu!</string>
    <string name="material_has_complete">Materi sudah berhasil diselesaikan, silahkan pilih materi selanjutnya!</string>
    <string name="login_expired">Sesion anda telah habis, silahkan login kembali!</string>
    <string name="quiz">Kuis</string>
    <string name="summary">Rangkuman</string>
    <string name="getting_ready">Bersiap siap!</string>
    <string name="require_permission">Tolong aktfikan permission suara dan memori internal untuk dapat menggunakan aplikasi!</string>
    <string name="next_lesson">Lanjut</string>
    <string name="tab_text_score">Skor</string>
    <string name="tab_text_scoreboard">Peringkat</string>
    <string name="level_up">Naik Level!</string>
    <string name="score_board">Papan Skor</string>
    <string name="score_detail">Detail Skor</string>
    <string name="total_time_consumption">Total Waktu</string>
    <string name="total_score">Total Score</string>
    <string name="position">Posisi</string>
    <string name="review_material">Review Materi</string>
    <string name="register_first">Silahkan Daftar</string>
    <string name="name">Nama</string>
    <string name="confirmation_password">Password Konfirmasi</string>
    <string name="level_user">Level</string>
    <string name="give_review">Berikan Penilaian</string>
    <string name="submit">Kirim</string>
    <string name="add_review">Tambahkan Pendapat Mengenai Modul</string>
    <string name="change_review">Ubah</string>
    <string name="please_complete_all_lesson">Tolong selesaikan semua pembelajaran terlebih dahulu</string>
    <string name="phone">Nomor Telepon</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="biodata">Biodata</string>
    <string name="verify">Cek Kode</string>
    <string name="code">Kode Verifikasi</string>
    <string name="permission_granted">Permintaan %1$s Diizinkan!</string>
    <string name="permission_denied">Permintaan %1$s Ditolak!</string>
    <string name="send_code">Kirim Kode</string>
    <string name="wait">tunggu...</string>
    <string name="validation_email_empty">Isi kolom email</string>
    <string name="please_fix_all_error">Terdapat error, tolong selesaikan terlebih dahulu!</string>
    <string name="record_first">Lakukan Perekaman Terlebih Dahulu!</string>
    <string name="current_password">Password saat ini</string>
    <string name="new_password">Password baru</string>
    <string name="edit_password">Ubah Password</string>
    <string name="app_version">V 1.0.0</string>
    <string name="version">Versi Aplikasi :</string>
    <string name="name_of_app">Nama Aplikasi : </string>
    <string name="find_me_on">Temukan Saya Di :</string>
    <string name="learning_histories">Riwayat Pembelajaran</string>
    <string name="progress">Proses</string>
    <string name="new_achievement">Pencapaian Baru!</string>
    <string-array name="genders">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>