<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_200">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_drawer_img_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/nav_drawer_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/nav_drawer_img_avatar"
        app:layout_constraintStart_toStartOf="@+id/nav_drawer_img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/nav_drawer_img_avatar" />

    <TextView
        android:id="@+id/nav_drawer_tv_user_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/nav_drawer_img_avatar"
        app:layout_constraintStart_toStartOf="@+id/nav_drawer_img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/nav_drawer_img_avatar" />

    <TextView
        android:id="@+id/nav_drawer_tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/level_user"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_drawer_tv_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_drawer_tv_user_level"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/nav_drawer_pb_level"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="16dp"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="@+id/nav_drawer_tv_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nav_drawer_tv_level"
        app:layout_constraintTop_toTopOf="@+id/nav_drawer_tv_level" />

    <TextView
        android:id="@+id/nav_drawer_tv_level_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/level_user"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_drawer_pb_level"
        app:layout_constraintStart_toStartOf="@+id/nav_drawer_tv_level"
        app:layout_constraintTop_toBottomOf="@+id/nav_drawer_pb_level"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>